--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   padding: 20px;
+  background-color: gray;
 
 }
 h2 {
@@ -7,7 +8,7 @@ h2 {
 }
 .beers {
   display: grid;
-  grid-template-columns: repeat(5,1fr);
+  grid-template-columns: repeat(3,1fr);
   gap: 40px;
   
 
